Add 'Open Directory' menu items and keybinding

--- a/data/geany.glade
+++ b/data/geany.glade
@@ -746,6 +746,12 @@
     <property name="stock">gtk-find</property>
     <property name="icon-size">1</property>
   </object>
+  <object class="GtkImage" id="image_open_directory1">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-directory</property>
+    <property name="icon-size">1</property>
+  </object>
   <object class="GtkListStore" id="indent_mode_list">
     <columns>
       <!-- column-name item -->
@@ -7869,9 +7875,27 @@
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">_Document</property>
                     <property name="use_underline">True</property>
+                    <signal name="activate" handler="on_menu_document1_activate" swapped="no"/>
                     <child type="submenu">
                       <object class="GtkMenu" id="menu_document1_menu">
                         <property name="can_focus">False</property>
+                        <child>
+                          <object class="GtkImageMenuItem" id="open_directory1">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="label" translatable="yes">Open Directory</property>
+                            <property name="use_underline">True</property>
+                            <property name="use_stock">False</property>
+                            <property name="image">image_open_directory1</property>
+                            <signal name="activate" handler="on_open_directory1_activate" swapped="no"/>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkSeparatorMenuItem" id="separator20">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                          </object>
+                        </child>
                         <child>
                           <object class="GtkCheckMenuItem" id="menu_line_wrapping1">
                             <property name="visible">True</property>
