--- a/data/geany.glade
+++ b/data/geany.glade
@@ -8118,6 +8118,15 @@
                           </object>
                         </child>
                         <child>
+                          <object class="GtkCheckMenuItem" id="set_file_favorite1">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="label" translatable="yes">Fa_vorite</property>
+                            <property name="use_underline">True</property>
+                            <signal name="toggled" handler="on_set_file_favorite1_toggled" swapped="no"/>
+                          </object>
+                        </child>
+                        <child>
                           <object class="GtkCheckMenuItem" id="set_file_readonly1">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
