Improve stuff related to key handling in VTE
- Add a separate Ctrl-[CD] reset setting
- Ctrl-[CDZ] now also bypasses accelerators just like Ctrl-Shift-[CV]
- Also consider terminal clean when Ctrl-D gets pressed
- Some Ctrl-[CDZ] detection functions were added to ui_utils.[ch]

--- a/data/geany.glade
+++ b/data/geany.glade
@@ -6268,6 +6268,21 @@
                               </packing>
                             </child>
                             <child>
+                              <object class="GtkCheckButton" id="check_ctrl_c_d_resets_vte">
+                                <property name="label" translatable="yes">Ctrl-C or Ctrl-D resets terminal</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="tooltip_text" translatable="yes">Enabling this allows Ctrl-C and Ctrl-D to reset the terminal.</property>
+                                <property name="draw_indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">True</property>
+                                <property name="position">4</property>
+                              </packing>
+                            </child>
+                            <child>
                               <object class="GtkCheckButton" id="check_ignore_menu_key">
                                 <property name="label" translatable="yes">Disable menu shortcut key (F10 by default)</property>
                                 <property name="visible">True</property>
@@ -6279,7 +6294,7 @@
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">True</property>
-                                <property name="position">4</property>
+                                <property name="position">5</property>
                               </packing>
                             </child>
                             <child>
@@ -6294,7 +6309,7 @@
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">True</property>
-                                <property name="position">5</property>
+                                <property name="position">6</property>
                               </packing>
                             </child>
                             <child>
@@ -6309,7 +6324,7 @@
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">True</property>
-                                <property name="position">6</property>
+                                <property name="position">7</property>
                               </packing>
                             </child>
                             <child>
@@ -6325,7 +6340,7 @@
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">True</property>
-                                <property name="position">7</property>
+                                <property name="position">8</property>
                               </packing>
                             </child>
                             <child>
@@ -6340,7 +6355,7 @@
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">True</property>
-                                <property name="position">8</property>
+                                <property name="position">9</property>
                               </packing>
                             </child>
                           </object>
