--- a/data/geany.glade
+++ b/data/geany.glade
@@ -6358,6 +6358,21 @@
                                 <property name="position">9</property>
                               </packing>
                             </child>
+                            <child>
+                              <object class="GtkCheckButton" id="vte_cwd_real_path">
+                                <property name="label" translatable="yes">Change directory based on real path</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="tooltip_text" translatable="yes">Refer to the document's real path when changing directories</property>
+                                <property name="draw_indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">True</property>
+                                <property name="position">10</property>
+                              </packing>
+                            </child>
                           </object>
                           <packing>
                             <property name="expand">False</property>
